fixed navbar collapse

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,6 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
-.navbar-nav {
-  float: right;
-}
 p {
   font-size: 12px;
 }
